# zephyr

arch/arm64/core/: Kconfig
boards/nxp/imx8mq_evk/: Kconfig.imx8mq_evk  imx8mq_evk-pinctrl.dtsi  imx8mq_evk_mimx8mq6_a53.dts  imx8mq_evk_mimx8mq6_a53.yaml  imx8mq_evk_mimx8mq6_a53_defconfig
boards/phytec/mimx8x_phycore/: Kconfig.mimx8x_phycore  board.yml  mimx8x_phycore-pinctrl.dtsi  mimx8x_phycore_mimx8qx6_a35.dts  mimx8x_phycore_mimx8qx6_a35.yaml  mimx8x_phycore_mimx8qx6_a35_defconfig  mimx8x_phycore_mimx8qx6_m4.dts  mimx8x_phycore_mimx8qx6_m4.yaml  mimx8x_phycore_mimx8qx6_m4_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.mcux_scu  clock_control_mcux_ccm.c  clock_control_nxp_scu.c
drivers/ethernet/nxp_enet/: eth_nxp_enet.c
drivers/ethernet/phy/: CMakeLists.txt  Kconfig  phy_qca_ar803x.c  phy_ti_dp83867.c
drivers/firmware/: CMakeLists.txt  Kconfig  Kconfig.imx_scu  imx_scu.c
drivers/interrupt_controller/: Kconfig.nxp_irqsteer  intc_gicv3.c  intc_nxp_irqsteer.c
drivers/mdio/: mdio_nxp_enet.c
drivers/power_domain/: CMakeLists.txt  Kconfig  power_domain_imx_scu.c
drivers/ptp_clock/: ptp_clock_nxp_enet.c
drivers/serial/: uart_mcux_lpuart.c
dts/arm/nxp/: nxp_imx8x_m4.dtsi
dts/arm64/nxp/: nxp_mimx8mq_a53.dtsi  nxp_mimx8x_a35.dtsi
dts/bindings/clock/: nxp,imx-scu.yaml
dts/bindings/ethernet/: nxp,enet.yaml  (+3 more)
soc/nxp/imx/imx8x/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc
soc/nxp/imx/imx8x/a35/: CMakeLists.txt  mmu_regions.c  soc.c
soc/nxp/imx/imx8x/m4/: CMakeLists.txt  soc.c
(+36 files in other folders)
